revise API spec
